# Tests

./: README.md  build.txt  main.c
CSharp_ASPWebApp/: C# Example ASP Web App Project.csproj  C# Example ASP Web App Project.http  C# Example ASP Web App Project.sln  Program.cs  README.md  WeatherForecast.cs
CSharp_ASPWebApp/Controllers/: PizzaController.cs  WeatherForecastController.cs
CSharp_ASPWebApp/Models/: Pizza.cs
CSharp_ASPWebApp/Properties/: launchSettings.json
CSharp_ASPWebApp/Services/: PizzaService.cs
CSharp_Swagger/: PizzaStore.sln  Program.cs
CSharp_Swagger/Properties/: launchSettings.json
CSharp_SwaggerDatabaseWebApp/: PizzaDb.cs  PizzaStoreMinimalDatabase.sln  Pizzas.db  Program.cs
CSharp_SwaggerDatabaseWebApp/Migrations/: 20240425004249_InitialCreate.Designer.cs  20240425004249_InitialCreate.cs  PizzaDbModelSnapshot.cs
CSharp_SwaggerDatabaseWebApp/Properties/: launchSettings.json
Clay/: main.c
DuckDB/: CMakeLists.txt  libraries.h  test.duckdb
Java_SpringBootExample/java.spring/: build.gradle  settings.gradle
Kotlin_SpringBootExample/kotlin.spring/: build.gradle  settings.gradle
MSSQL_Server_Edit_View/: ExampleEditView.sql  NextSteps.md  ReadMe.md
PythonPySimpleGui/PySimpleGui4_FLOSS/: main.py
PythonPySimpleGui/PySimpleGui5/: main.py
Python_Django/project/: db.sqlite3
Python_FlaskWebAssembly/: server.py
Python_FlaskWebAssembly/app/: .qmake.stash  Makefile  QtWebAssemblyTest.html  QtWebAssemblyTest.js  QtWebAssemblyTest.worker.js  server.py  (+4 more)
Python_SeleniumBraveBrowser/: main.py
Python_Sockets/: client.py  server.py
(+1047 files in other folders)
